--- a/design/templates/OpenGame/admin/admin_tools.tpl.html
+++ b/design/templates/OpenGame/admin/admin_tools.tpl.html
@@ -1,10 +1,25 @@
-<h1>{L_adm_tools}</h1>
-<table>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_PHP}">phpinfo()</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_SQL}">{L_adm_tool_sql_page_header}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_CONFIG_RELOAD}">{L_adm_tools_reloadConfig}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_MD5}">{L_adm_tool_md5_header}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}">{L_adm_update_repeat}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_ALL}">{L_adm_update_force}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_PTL_TEST}">{L_adm_ptl_test}</a></th></tr>
-</table>
+<h1>{PAGE_HEADER}</h1>
+
+<div style="display: inline-block;">
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_TOOL_INFO_PHP}" class="button_pseudo w100">phpinfo()</a>
+  </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_TOOL_INFO_SQL}" class="button_pseudo w100">{L_adm_tool_sql_page_header}</a>
+  </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_TOOL_CONFIG_RELOAD}" class="button_pseudo w100">{L_adm_tools_reloadConfig}</a>
+  </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_TOOL_MD5}" class="button_pseudo w100">{L_adm_tool_md5_header}</a>
+  </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}" class="button_pseudo w100">{L_adm_update_repeat}</a>
+  </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_ALL}" class="button_pseudo w100">{L_adm_update_force}</a>
+  </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_PTL_TEST}" class="button_pseudo w100">{L_adm_ptl_test}</a>
+  </div>
+</div>
