--- a/design/templates/OpenGame/ali_admin_diplomacy.tpl.html
+++ b/design/templates/OpenGame/ali_admin_diplomacy.tpl.html
@@ -1,4 +1,7 @@
 <h2>{L_ali_dip_title} - {L_ali_dip_negotiate}</h2>
+
+<a class="button_pseudo link" href="alliance.php?mode=admin">{L_ali_adm_return}</a><br/>
+
 <table width=519>
   <tr class="c_l"><th>{L_ali_dip_offer_new}</th></tr>
 
@@ -64,11 +67,6 @@
   <!-- BEGINELSE offer -->  
     <tr><th colspan=5>{L_ali_dip_offer_none}</th></tr>
   <!-- END offer -->  
-  
-  <tr>
-    <td class=c colspan=5>
-		<a class="link fl" href="alliance.php?mode=admin">{L_ali_adm_return}</a>
-      <a class="link fr" href="alliance.php">{L_ali_sys_main_page}</a>
-    </td>
-  </tr>
 </table>
+
+<a class="button_pseudo link" href="alliance.php">{L_ali_sys_main_page}</a>
