--- a/design/templates/OpenGame/ali_admin_rights.tpl.html
+++ b/design/templates/OpenGame/ali_admin_rights.tpl.html
@@ -1,10 +1,8 @@
-<br />
-<table width=519>
-  <tr><th class="c_c" colspan="7">
-    <span class="fl">{L_ali_adm_rights_title}</span>
-    <span class="fr"><a class="link" href="alliance.php?mode=admin">{L_ali_adm_return}</a></span>
-  </th></tr>
+<h1>{L_ali_adm_rights_title}</h1>
 
+<a class="button_pseudo link" href="alliance.php?mode=admin">{L_ali_adm_return}</a><br/>
+
+<table width=519>
   <form action="alliance.php?mode=admin&edit=rights" method=POST>
     <tr>
       <td class="c"><img src="design/images/abort.gif" alt="{L_ali_adm_rights_rank_delete}" title="{L_ali_adm_rights_rank_delete}" border="0"></td>
