--- a/design/templates/OpenGame/ali_admin.tpl.html
+++ b/design/templates/OpenGame/ali_admin.tpl.html
@@ -1,3 +1,6 @@
+<h1>{L_ally_admin} [{ally_tag}]</h1>
+<a class="link button_pseudo" href="alliance.php">{L_ali_sys_main_page}</a>
+<br/>
 <br/>
 <form action="" method="POST" enctype="multipart/form-data">
   <table width=519>
@@ -5,37 +8,37 @@
       <th colspan=2>
         <div class="contFJ">
           {L_ali_adm_options}
-          <a class="link button_pseudo" href="alliance.php">{L_ali_sys_main_page}</a>
         </div>
       </th>
     </tr>
     <tr>
       <th>{L_Name}</th>
-      <th><input type=text name="name" value="{ally_name}" size="70"></th>
+      <th><input type=text name="name" value="{ally_name}" size="40" maxlength="32"></th>
     </tr>
     <tr>
       <th>{L_Tag}</th>
-      <th><input type=text name="tag" value="{ally_tag}" size="70"></th>
+      <th><input type=text name="tag" value="{ally_tag}" size="40" maxlength="8"></th>
     </tr>
     <tr>
       <th>{L_Main_Page}</th>
-      <th><input type=text name="web" value="{ally_web}" size="70"></th>
+      <th><input type=text name="web" value="{ally_web}" size="40" maxlength="255"></th>
     </tr>
     <tr>
-      <th>{L_Alliance_logo}</th>
+      <th>
+        <div>{L_Alliance_logo}</div>
+      </th>
       <td class="c_l">
         <!-- IF AVATAR_UPLOAD_MESSAGE -->
         <span class="<!-- IF AVATAR_UPLOAD_STATUS == 0 -->success<!-- ELSEIF AVATAR_UPLOAD_STATUS == 1 -->warning<!-- ELSE -->error<!-- ENDIF -->">{AVATAR_UPLOAD_MESSAGE}</span><br/>
         <!-- ENDIF -->
-        <label for="avatar">{L_opt_upload}</label>&nbsp;<input type="file" name="avatar" size="50"><br/>
-        <span class="fl">
-          <!-- IF ALLY_IMAGE -->
-            <img src="{D_SN_ROOT_VIRTUAL}/images/avatar/ally_{ALLY_ID}.png"><br/>
-            <input name="avatar_remove" type="checkbox" id="avatar_remove"/><label for="avatar_remove">{L_opt_avatar_remove}</label>
-          <!-- ELSE -->
-            <a href="http://www.google.com.ar/imghp" target="_blank">{L_opt_avatar_search}</a>
-          <!-- ENDIF -->
-        </span>
+        <!-- IF ALLY_IMAGE -->
+        <div align="center">
+          <img src="{D_SN_ROOT_VIRTUAL}/images/avatar/ally_{ALLY_ID}.png" alt="logo"/><br/>
+          <input name="avatar_remove" type="checkbox" id="avatar_remove"/><label for="avatar_remove">{L_opt_avatar_remove}</label>
+        </div>
+        <!-- ELSE -->
+        <label for="avatar">{L_opt_upload}</label>&nbsp;<input type="file" name="avatar" id=avatar size="40"><br/>
+        <!-- ENDIF -->
       </td>
     </tr>
     <tr>
@@ -88,10 +91,17 @@
 
 <form action="" method="POST" style="width:48em;margin-top:1em;">
   <div class="header">{L_ally_admin}</div>
-  <!-- BEGIN admin_actions -->
-  <div class="cell"><a class="button_pseudo" href="alliance.php?mode=admin&edit={admin_actions.ACTION}">{admin_actions.LOCALE}</a>
+  <div class="cell">
+    <div style="display: inline-block">
+      <!-- BEGIN admin_actions -->
+      <div>
+        <a class="button_pseudo w100" href="alliance.php?mode=admin&edit={admin_actions.ACTION}">
+          {admin_actions.LOCALE}
+        </a>
+      </div>
+      <!-- END admin_actions -->
+    </div>
   </div>
-  <!-- END admin_actions -->
   <div class="cell contFJ" style="padding: 0 1em; {hideNotOwner}">
     <div>
       {L_ali_adm_transfer}&nbsp;&nbsp;&nbsp;
