--- a/design/templates/OpenGame/ali_external_make.tpl.html
+++ b/design/templates/OpenGame/ali_external_make.tpl.html
@@ -2,18 +2,18 @@
 <form action="alliance.php?mode=make&yes=1" method="POST">
 <table width=519>
 	<tr>
-	  <td class="c" colspan=2>{make_alliance}</td>
+	  <td class="c" colspan=2>{L_make_alliance}</td>
 	</tr>
 	<tr>
-	  <th>{alliance_tag} (3-8 {characters})</th>
+	  <th>{L_alliance_tag} (3-8 {L_sys_characters})</th>
 	  <th><input type="text" name="tag" size=8 maxlength=8 value=""></th>
 	</tr>
 	<tr>
-	  <th>{allyance_name} (max. 35 {characters})</th>
-	  <th><input type="text" name="name" size=20 maxlength=30 value=""></th>
+	  <th>{L_allyance_name} (1-32 {L_sys_characters})</th>
+	  <th><input type="text" name="name" size=20 maxlength=32 value=""></th>
 	</tr>
 	<tr>
-	  <th colspan=2><input type="submit" value="{sys_create}"></th>
+	  <th colspan=2><input type="submit" value="{L_sys_create}"></th>
 	</tr>
 </table>
 
