CODE-feat-42a25.8: Removed more calls for parsetemplate()

--- a/design/templates/OpenGame/admin/message_body.tpl.html
+++ b/design/templates/OpenGame/admin/message_body.tpl.html
@@ -1,8 +1,11 @@
 <br><br>
 <table width="519">
-<tr>
-	<td class="c">{title}</td>
-</tr><tr>
-	<th><font color="white"><div id="admin_message">{mes}</div></font></th>
-</tr>
+  <tr>
+    <td class="c">{title}</td>
+  </tr>
+  <tr>
+    <th style="color: white">
+      <div id="admin_message">{mes}</div>
+    </th>
+  </tr>
 </table>
