NAVBAR-misc-42a25.19: Separate popup for energy

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -3436,7 +3436,7 @@ td.error_message {
 
 
 /* Hiding resource tooltip pattern */
-#navbar_resource_flex_tooltip_pattern
+#navbar_resource_flex_tooltip_pattern, #navbar_resource_flex_tooltip_pattern_energy
 {
   display: none;
 }
