--- a/design/templates/OpenGame/admin/admin_ptl_test.tpl.html
+++ b/design/templates/OpenGame/admin/admin_ptl_test.tpl.html
@@ -1,8 +1,5 @@
 <h1>Test is <span id="ptl_global_status"></span></h1>
 
-{I_[$BLACK]}<br />
-{I_s_[$BLACK]}
-
 <table id="ptl_test_table">
   <tr class="c_c">
     <th>{Конструкция}</th>
@@ -112,6 +109,14 @@
   </tr>
   <!-- ENDIF -->
   <!-- END test -->
+
+  <tr>
+    <th colspan="5" class="c_c">
+      Decorators
+    </th>
+  </tr>
+  <!-- INCLUDE admin/tests/_number_color_value -->
+
 </table>
 
 
