--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -48,6 +48,26 @@
   </table>
 </div>
 
+<div id="navbar_resource_flex_tooltip_pattern_energy">
+  <table class="no_border_image">
+    <tr class="c_c no_select">
+      <th colspan="2">&#123;0&#125;</th>
+    </tr>
+    <tr>
+      <td>{L_tech_storage_energy}</td>
+      <td class="c_r">&#123;1&#125;</td>
+    </tr>
+    <tr>
+      <td>{L_tech_storage_energy_max}</td>
+      <td class="c_r">&#123;2&#125;</td>
+    </tr>
+    <tr>
+      <td>{L_tech_storage_energy_fullness}</td>
+      <td class="c_r">&#123;3&#125;%</td>
+    </tr>
+  </table>
+</div>
+
 <!-- DEFINE $IN_NAVBAR = 1 -->
 <div id="navbar_container" class="{$NAVBAR_RESOURCES_CLASS} {$NAVBAR_VERTICAL_CLASS}">
   <div class="header c_c border_image_small {$NAVBAR_RESOURCES_CLASS} {$NAVBAR_VERTICAL_CLASS}" id="navbar">
