--- a/design/templates/OpenGame/navbar_resources.tpl.html
+++ b/design/templates/OpenGame/navbar_resources.tpl.html
@@ -50,6 +50,7 @@
       resourceNameLongId: 'sys_deuterium'
     },
     "energy": {
+      used_value: Math.floatVal('{PLANET_ENERGY}'),
       start_value: Math.floatVal('{ENERGY_BALANCE_NUMBER}'),
       max_value: Math.floatVal('{ENERGY_MAX_NUMBER}'),
       resourceNameLongId: 'sys_energy'
