QUEST-feat-42a25.26: New quest status 'Started'

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -197,7 +197,7 @@
           <a href="quest.php">
             <img class="navbar_button_image" src="{I_navbar_quest}" alt="{L_qst_quests}" title="{L_qst_quests}">
             <span class="a50 posRB w100">
-              {TOPNAV_QUEST_COMPLETE}/{C_quest_total}
+              <span class="notice">{TOPNAV_QUEST_IN_PROGRESS}</span>/<span class="success">{TOPNAV_QUEST_COMPLETE}</span>/{C_quest_total}
             </span>
             <span class="posLT w100 a50">
               {L_navbar_button_quests}
