--- a/design/templates/OpenGame/quest.tpl.html
+++ b/design/templates/OpenGame/quest.tpl.html
@@ -94,7 +94,16 @@
           <!-- END quest_rewards_list -->
       </th>
       <!-- IF USER_ID -->
-        <th class="c_c <!-- IF quest.QUEST_STATUS == 2 -->success<!-- ELSE -->notice<!-- ENDIF -->" width="80">{quest.QUEST_STATUS_NAME}</th>
+
+        <!-- IF quest.QUEST_STATUS == QUEST_STATUS_COMPLETE -->
+          <!-- DEFINE $QUEST_CLASS = 'success' -->
+        <!-- ELSEIF quest.QUEST_STATUS == QUEST_STATUS_STARTED -->
+          <!-- DEFINE $QUEST_CLASS = 'notice' -->
+        <!-- ELSE -->
+          <!-- DEFINE $QUEST_CLASS = 'warning' -->
+        <!-- ENDIF -->
+
+        <th class="c_c {$QUEST_CLASS}" width="80">{quest.QUEST_STATUS_NAME}</th>
       <!-- ENDIF -->
       <!-- IF IN_ADMIN && ! USER_ID -->
         <th class="c_c" width="22"><a href="admin/adm_quest.php?mode=edit&id={quest.QUEST_ID}"><img src="design/images/icon_edit.png"></a></th>
