QUEST-feat-42a26.0: Quest interface remade

--- a/design/templates/OpenGame/quest.tpl.html
+++ b/design/templates/OpenGame/quest.tpl.html
@@ -1,118 +1,207 @@
-<h2>{L_qst_quests}</h2>
+<h1>{L_qst_quests}</h1>
+<h3>{L_qst_total}:&nbsp;{TOTAL}</h3>
 <!-- IF IN_ADMIN && ! USER_ID -->
-  <table width="519">
-    <form action="admin/adm_quest.php" method="post" name="fForm">
-      <input type="hidden" name="mode" value="{mode}">
-      <input type="hidden" name="id" value="{QUEST_ID}">
+<table width="519">
+  <form action="admin/adm_quest.php" method="post" name="fForm">
+    <input type="hidden" name="mode" value="{mode}">
+    <input type="hidden" name="id" value="{QUEST_ID}">
 
-      <tr><td class="c" colspan=2><!-- IF mode == 'edit' -->{L_qst_edit}<!-- ELSEIF mode == 'copy' -->{L_qst_copy}<!-- ELSE -->{L_qst_add}<!-- ENDIF --></td></tr>
-      <tr>
-        <td>{L_qst_name}</td>
-        <td>
-          <input class="fl" name="QUEST_NAME" size="50" maxlength="255" value="{QUEST_NAME}">
-          <span class="fr"><!-- IF mode == 'edit' -->{L_qst_mode_edit}<!-- ELSEIF mode == 'copy' -->{L_qst_mode_copy}<!-- ELSE -->{L_qst_mode_add}<!-- ENDIF --></span>
-        </td>
-      </tr>
-
-      <tr>
-        <td valign="top">{L_qst_description}</td>
-        <td><textarea name="QUEST_DESCRIPTION" cols=40 rows=5 width="80%">{QUEST_DESCRIPTION}</textarea></td>
-      </tr>
-      <tr class="c_l">
-        <td>{L_qst_conditions}</td>
-        <td class="c_l">
-          <input name="QUEST_UNIT_AMOUNT" size="15" maxlength="15" value="{QUEST_UNIT_AMOUNT}"> x 
-          <select name="QUEST_UNIT_ID">
-            <!-- BEGIN allowed_unit -->
-              <option value="{allowed_unit.ID}"<!-- IF allowed_unit.ID == QUEST_UNIT_ID --> selected<!-- ENDIF -->>{allowed_unit.NAME}</option>
-            <!-- END allowed_unit -->
-          </select>
-        </td>
-      </tr>
-      <tr class="c_l">
-        <td>{L_qst_rewards}</td>
-        <td>
-          <!-- BEGIN quest_rewards_list -->
-            <input name="QUEST_REWARDS_LIST[{quest_rewards_list.ID}]" size="15" maxlength="15" value="{quest_rewards_list.AMOUNT}"> {quest_rewards_list.NAME}<br/>
-          <!-- END quest_rewards_list -->
-        </td>
-        <!-- IF false -->
-        <td>
-          <input name="QUEST_REWARDS_AMOUNT" size="15" maxlength="15" value="{QUEST_REWARDS_AMOUNT}"> x 
-          <select name="QUEST_REWARDS_ID">
-            <!-- BEGIN allowed_reward -->
-              <option value="{allowed_reward.ID}"<!-- IF allowed_reward.ID == QUEST_REWARDS_ID --> selected<!-- ENDIF -->>{allowed_reward.NAME}</option>
-            <!-- END allowed_reward -->
-          </select>
-        </td>
-        <!-- ENDIF -->
-      </tr>
-      <tr>
-        <td colspan="2" class="c_c">
-          <input type="submit" name="confirm" value="<!-- IF mode == 'edit' -->{L_qst_edit}<!-- ELSEIF mode == 'copy' -->{L_qst_copy}<!-- ELSE -->{L_qst_add}<!-- ENDIF -->">
-        </td>
-      </tr>
-    </form>
-  </table>
-  <br>
-<!-- ENDIF -->
-
-<!-- IF USER_ID -->
-  <!-- DEFINE $COLSPAN = 4 -->
-<!-- ELSE -->
-  <!-- DEFINE $COLSPAN = 6 -->
-<!-- ENDIF -->
-
-<table width="800">
-  <tr><td class="c" colspan="{$COLSPAN}">
-    <div class="fl">{L_qst_quests}</div>
-    <div class="fr">{L_qst_total}:&nbsp;{TOTAL}</div>
-  </td></tr>
-<!--
-  <tr>
-    <th class="c_c">{L_qst_name}</th>
-    <th class="c_c" width="100%">{L_qst_description}</th>
-    <th class="c_c">{L_qst_conditions}</th>
-    <th class="c_c">{L_qst_rewards}</th>
-    <!-- IF USER_ID -->
-      <th class="c_c">{L_qst_status}</th>
-    <!-- ENDIF -->
-    <!-- IF IN_ADMIN && ! USER_ID -->
-      <th class="c_c"><img src="design/images/icon_edit.png"></th>
-      <th class="c_c"><img src="design/images/icon_copy.gif"></th>
-      <th class="c_c"><img src="design/images/r1.png"></th>
-    <!-- ENDIF -->
-  </tr>
--->
-  <!-- BEGIN quest -->
     <tr>
-      <th class="c_c">{quest.QUEST_NAME}</th>
-      <th class="c_c" width="240">{quest.QUEST_UNIT_AMOUNT}&nbsp;x&nbsp;{quest.QUEST_UNIT_NAME}</th>
-      <th class="c_c" width="120">
-          <!-- BEGIN quest_rewards_list -->
-            {quest_rewards_list.AMOUNT}&nbsp;x&nbsp;{quest_rewards_list.NAME}<br/>
-          <!-- END quest_rewards_list -->
-      </th>
-      <!-- IF USER_ID -->
+      <td class="c" colspan=2><!-- IF mode == 'edit' -->{L_qst_edit}<!-- ELSEIF mode == 'copy' -->{L_qst_copy}
+        <!-- ELSE -->{L_qst_add}<!-- ENDIF --></td>
+    </tr>
+    <tr>
+      <td>{L_qst_name}</td>
+      <td>
+        <input class="fl" name="QUEST_NAME" size="50" maxlength="255" value="{QUEST_NAME}">
+        <span class="fr"><!-- IF mode == 'edit' -->{L_qst_mode_edit}<!-- ELSEIF mode == 'copy' -->{L_qst_mode_copy}
+          <!-- ELSE -->{L_qst_mode_add}<!-- ENDIF --></span>
+      </td>
+    </tr>
 
-        <!-- IF quest.QUEST_STATUS == QUEST_STATUS_COMPLETE -->
-          <!-- DEFINE $QUEST_CLASS = 'success' -->
-        <!-- ELSEIF quest.QUEST_STATUS == QUEST_STATUS_STARTED -->
-          <!-- DEFINE $QUEST_CLASS = 'notice' -->
-        <!-- ELSE -->
-          <!-- DEFINE $QUEST_CLASS = 'warning' -->
-        <!-- ENDIF -->
-
-        <th class="c_c {$QUEST_CLASS}" width="80">{quest.QUEST_STATUS_NAME}</th>
-      <!-- ENDIF -->
-      <!-- IF IN_ADMIN && ! USER_ID -->
-        <th class="c_c" width="22"><a href="admin/adm_quest.php?mode=edit&id={quest.QUEST_ID}"><img src="design/images/icon_edit.png"></a></th>
-        <th class="c_c" width="22"><a href="admin/adm_quest.php?mode=copy&id={quest.QUEST_ID}"><img src="design/images/icon_copy.gif"></a></th>
-        <th class="c_c" width="22"><a href="admin/adm_quest.php?mode=del&id={quest.QUEST_ID}"><img src="design/images/r1.png"></a></th>
+    <tr>
+      <td valign="top">{L_qst_description}</td>
+      <td><textarea name="QUEST_DESCRIPTION" cols=40 rows=5 width="80%">{QUEST_DESCRIPTION}</textarea></td>
+    </tr>
+    <tr class="c_l">
+      <td>{L_qst_adm_conditions}</td>
+      <td class="c_l">
+        <input name="QUEST_UNIT_AMOUNT" size="15" maxlength="15" value="{QUEST_UNIT_AMOUNT}"> x
+        <select name="QUEST_UNIT_ID">
+          <!-- BEGIN allowed_unit -->
+          <option value="{allowed_unit.ID}"<!-- IF allowed_unit.ID == QUEST_UNIT_ID --> selected<!-- ENDIF -->
+          >{allowed_unit.NAME}</option>
+          <!-- END allowed_unit -->
+        </select>
+      </td>
+    </tr>
+    <tr class="c_l">
+      <td>{L_qst_rewards}</td>
+      <td>
+        <!-- BEGIN quest_rewards_list -->
+        <input name="QUEST_REWARDS_LIST[{quest_rewards_list.ID}]" size="15" maxlength="15"
+               value="{quest_rewards_list.AMOUNT}"> {quest_rewards_list.NAME}<br/>
+        <!-- END quest_rewards_list -->
+      </td>
+      <!-- IF false -->
+      <td>
+        <input name="QUEST_REWARDS_AMOUNT" size="15" maxlength="15" value="{QUEST_REWARDS_AMOUNT}"> x
+        <select name="QUEST_REWARDS_ID">
+          <!-- BEGIN allowed_reward -->
+          <option value="{allowed_reward.ID}"<!-- IF allowed_reward.ID == QUEST_REWARDS_ID --> selected<!-- ENDIF -->
+          >{allowed_reward.NAME}</option>
+          <!-- END allowed_reward -->
+        </select>
+      </td>
       <!-- ENDIF -->
     </tr>
     <tr>
-      <td align=justify colspan="{$COLSPAN}">{quest.QUEST_DESCRIPTION}</td>
+      <td colspan="2" class="c_c">
+        <input type="submit" name="confirm"
+               value="<!-- IF mode == 'edit' -->{L_qst_edit}<!-- ELSEIF mode == 'copy' -->{L_qst_copy}<!-- ELSE -->{L_qst_add}<!-- ENDIF -->">
+      </td>
     </tr>
-  <!-- END quest -->
+  </form>
 </table>
+<br>
+<!-- ENDIF -->
+
+<style type="text/css">
+  .quest_list
+  {
+    max-width: 70em;
+  }
+
+  .quest_admin_wrapper {
+    margin: 0.5em;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+
+  .quest_admin_buttons
+  {
+    margin: 0;
+    flex-shrink: 100;
+    flex-grow: 0.01;
+    flex-basis: 1%;
+  }
+
+  .quest_wrapper
+  {
+    flex-shrink: 1;
+    flex-grow: 1;
+    flex-basis: 1%;
+  }
+
+  .quest_header.header
+  {
+    font-size: 120%;
+    margin: 0.5em;
+    padding: 0.5em;
+  }
+
+  .quest_name
+  {
+
+  }
+
+  .quest_status
+  {
+
+  }
+
+  .quest_description.cell
+  {
+    text-align: justify;
+    /*margin: 0.5em 0;*/
+    margin: 0.5em;
+    padding: 0.5em;
+  }
+
+  .quest_details
+  {
+    flex-wrap: wrap;
+    align-items: stretch;
+  }
+
+  .quest_details > div
+  {
+    flex-grow: 1;
+    margin: 0.5em;
+    padding: 0.5em;
+    /*border: 1px solid red;*/
+  }
+
+  .quest_details ul
+  {
+    padding-left: 0;
+  }
+
+  .quest_details li
+  {
+    margin-left: 2em;
+  }
+</style>
+
+<div class="quest_list border_image_large ">
+  <!-- BEGIN quest -->
+  <!-- IF quest.QUEST_STATUS == QUEST_STATUS_COMPLETE -->
+  <!-- DEFINE $QUEST_CLASS = 'success' -->
+  <!-- ELSEIF quest.QUEST_STATUS == QUEST_STATUS_STARTED -->
+  <!-- DEFINE $QUEST_CLASS = 'notice' -->
+  <!-- ELSE -->
+  <!-- DEFINE $QUEST_CLASS = 'warning' -->
+  <!-- ENDIF -->
+
+  <div class="quest_admin_wrapper border_image_small">
+    <div class="quest_wrapper">
+      <div class="quest_header contFJ header {$QUEST_CLASS}">
+        <div class="quest_name">
+          {quest.QUEST_NAME}
+        </div>
+        <!-- IF USER_ID -->
+        <div class="quest_status">
+          <span class="">{quest.QUEST_STATUS_NAME}</span>
+        </div>
+        <!-- ENDIF -->
+      </div>
+
+      <div class="quest_description cell">
+        {quest.QUEST_DESCRIPTION}
+      </div>
+
+      <div class="quest_details contFJ">
+        <div class="subheader">
+          <ul>
+            {L_qst_conditions}
+            <li class="info">{quest.QUEST_UNIT_AMOUNT}&nbsp;x&nbsp;{quest.QUEST_UNIT_NAME}</li>
+          </ul>
+        </div>
+        <div class="subheader">
+          <ul>
+            {L_qst_rewards}
+            <!-- BEGIN quest_rewards_list -->
+            <li class="ok">{quest_rewards_list.AMOUNT}&nbsp;x&nbsp;{quest_rewards_list.NAME}</li>
+            <!-- END quest_rewards_list -->
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- IF IN_ADMIN && ! USER_ID -->
+    <div class="quest_admin_buttons">
+      <a class="button_pseudo" href="admin/adm_quest.php?mode=edit&id={quest.QUEST_ID}">
+        <img src="design/images/icon_edit.png">
+      </a>
+      <a class="button_pseudo" href="admin/adm_quest.php?mode=copy&id={quest.QUEST_ID}">
+        <img src="design/images/icon_copy.gif">
+      </a>
+      <a class="button_pseudo" href="admin/adm_quest.php?mode=del&id={quest.QUEST_ID}">
+        <img src="design/images/r1.png">
+      </a>
+    </div>
+    <!-- ENDIF -->
+  </div>
+  <!-- END quest -->
+</div>
