--- a/design/templates/OpenGame/message_body.tpl.html
+++ b/design/templates/OpenGame/message_body.tpl.html
@@ -1,8 +1,17 @@
-<br />
-<table width="519">
-  <tr><td class="c">{title}</td></tr>
-  <tr><th class="errormessage">{mes}</th></tr>
-  <!-- IF DEST -->
-  <tr><td class="c link"><a href="{DEST}">{L_sys_continue}</a></td></tr>
+<div class="admin_message_box border_image_small">
+  <div class="header">{TITLE}</div>
+  <div class="cell">{MESSAGE}</div>
+  <!-- IF REDIRECT_TO -->
+  <div class="subheader">
+    <a id="js_redirect" href="{REDIRECT_TO}" class="link">{L_sys_click_here_to_continue}</a>
+  </div>
   <!-- ENDIF -->
-</table>
+</div>
+
+<!-- IF TIMEOUT -->
+<script type="text/javascript">
+  setTimeout(function () {
+    document.getElementById("js_redirect").click();
+  }, Math.intVal("{TIMEOUT}" * 1000));
+</script>
+<!-- ENDIF -->
