CODE-feat-42a28.1: Improved loading of CSS files

--- a/design/templates/OpenGame/_page_20_header.tpl.html
+++ b/design/templates/OpenGame/_page_20_header.tpl.html
@@ -30,7 +30,7 @@
       <!-- ENDIF -->
     <!-- END css -->
 
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_override.css?{C_var_db_update}" />
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_override.css?{C_var_db_update}" />-->
 
     <title>{title}</title>
   </head>
